--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ textarea.form-control.large {
 }
 
 /* Formularbeschreibung */
-.formula-box {
+.formular-box {
     background-color: #f8f9fa;
     border-radius: 0.375rem;
     padding: 1rem;
